--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-uglify": "^3.0.0",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
-    "run-sequence": "^2.2.1"
+    "run-sequence": "^2.2.1",
+    "lodash": ">=4.17.5"
   }
 }
