--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,17 @@
 {
   "name": "rc-consent",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "author": "Auban le Grelle <auban@viamonkey.com>",
   "homepage": "https://redcastor.io",
-  "description": "A Vanilla JS plugin which meets General Data Protection Regulations (GDPR).",
+  "description": "Cookie consent a Vanilla JS plugin which meets General Data Protection Regulations (GDPR).",
   "license": "MIT",
   "keywords": [
     "consent",
     "rgpd",
     "cookie",
-    "cookies"
+    "cookies",
+    "angular",
+    "angularJS"
   ],
   "main": [
     "dist/rc-consent.js"
