--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-consent",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "author": "Auban le Grelle <auban@viamonkey.com>",
   "homepage": "https://redcastor.io",
   "licenses": [
@@ -9,7 +9,15 @@
       "url": "http://opensource.org/licenses/MIT"
     }
   ],
-  "description": "A Vanilla JS plugin which meets General Data Protection Regulations (GDPR).",
+  "description": "Cookie consent a Vanilla JS plugin which meets General Data Protection Regulations (GDPR).",
+  "keywords": [
+    "consent",
+    "rgpd",
+    "cookie",
+    "cookies",
+    "angular",
+    "angularJS"
+  ],
   "main": "dist/rc-consent.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0"
